# EchoSend-GUI

./: .gitignore  README.md  package-lock.json  package.json
.claude/commands/: build.md
.github/workflows/: build-release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: app.js  index.html  styles.css
